# components

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: publish-wordmark.yml  publish.yml
components/archive/: Cargo.toml
components/archive/src/: lib.rs
components/archive/tests/: test.rs
components/archive/wit/: world.wit
components/csvmark/: Cargo.toml
components/csvmark/src/: lib.rs
components/csvmark/tests/: test.rs
components/csvmark/wit/: world.wit
components/embed-index/: Cargo.toml  README.md
components/embed-index/src/: lib.rs
components/embed-index/tests/: test.rs
components/embed-index/wit/: world.wit
components/feedmark/: Cargo.toml
components/feedmark/src/: lib.rs
components/feedmark/tests/: test.rs
components/feedmark/wit/: world.wit
components/ocr/: Cargo.toml
components/ocr/src/: lib.rs
components/ocr/tests/: test.rs
components/ocr/wit/: world.wit
components/tablemark/: Cargo.toml
components/tablemark/src/: lib.rs
components/tablemark/tests/: test.rs
components/tablemark/wit/: world.wit
components/wordmark/: Cargo.toml
components/wordmark/src/: lib.rs
components/wordmark/tests/: test.rs
components/wordmark/wit/: world.wit
crates/markdown-to-word/: Cargo.toml
interface-types/acp/: agent.wit  client.wit  content.wit  errors.wit  filesystem.wit  init.wit  prompts.wit  sessions.wit  terminals.wit  tools.wit  types.wit  world.wit
interface-types/color/: world.wit
interface-types/docs/: world.wit
src/: lib.rs
