[workspace]
members = ["components/*"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"
missing_debug_implementations = "deny"
nonstandard_style = { level = "deny", priority = -1 }
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"

[workspace.lints.rustdoc]
missing_doc_code_examples = "warn"

[workspace.lints.clippy]
# Lint groups (as baselines, priority -1 so individual overrides win)
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Individual lints — deny (hard errors even outside CI)
indexing_slicing = "deny"
fallible_impl_from = "deny"

# Individual lints — warn (fail in CI via -Dwarnings)
fn_params_excessive_bools = "warn"
must_use_candidate = "warn"
unneeded_field_pattern = "warn"

# Cherry-picked restriction lints
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
clone_on_ref_ptr = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
error_impl_error = "warn"
infinite_loop = "warn"
rest_pat_in_fully_bound_structs = "warn"
unnecessary_self_imports = "warn"
verbose_file_reads = "warn"

# Pedantic overrides — allow (too noisy or conflicts with project style)
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
self_named_module_files = "allow"
multiple_crate_versions = "allow"
doc_markdown = "allow"
cargo_common_metadata = "allow"
str_to_string = "allow"
