[package]
name = "csvmark"
license = "Apache-2.0"
repository = "https://github.com/yoshuawuyts/components"
documentation = "https://docs.rs/csvmark"
description = "Wasm Components"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
wit-bindgen = "0.36"
csv = "1.3"
pulldown-cmark = { version = "0.12", default-features = false }

[dev-dependencies]

[lints]
workspace = true
