[package]
name = "tablemark"
license = "Apache-2.0"
repository = "https://github.com/yoshuawuyts/components"
documentation = "https://docs.rs/tablemark"
description = "Wasm Components"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]
publish = false

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
wit-bindgen = "0.36"
calamine = "0.26"
pulldown-cmark = { version = "0.12", default-features = false }
# Pinned to <0.92 because newer releases pull in `zip 7.x` -> `typed-path
# 0.12` which uses `#![feature(wasip2)]` and so cannot be built on stable
# Rust for the `wasm32-wasip2` target.
rust_xlsxwriter = { version = "~0.91", default-features = false }

[dev-dependencies]

[lints]
workspace = true
