[package]
name = "wordmark"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/components"
documentation = "https://docs.rs/wordmark"
description = "Wasm Components"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]
wit-bindgen = "0.36"
pulldown-cmark = { version = "0.12", default-features = false }
docx-rs = "0.4"

[dev-dependencies]
