[package]
name = "markdown-to-word"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/components"
documentation = "https://docs.rs/markdown-to-word"
description = "Wasm Components"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = ["Yoshua Wuyts <rust@yosh.is>"]

[lib]
crate-type = ["cdylib"]

[features]

[dependencies]

[dev-dependencies]
